--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,18 @@
 <div>
+  <label>
+    <input #heroName />
+  </label>
+  <button (click)="add(heroName.value); heroName.value=''">Add</button>
+</div>
+<div>
   <ul class="heroes">
     <li *ngFor="let hero of heroes">
       <a routerLink="/detail/{{ hero.id }}">
         <span class="badge">{{ hero.id }}</span> {{ hero.name }}
       </a>
+      <button class="delete" 
+        (click)="delete(hero)"
+        title="Delete hero">x</button>
     </li>
   </ul>
 </div>
